# desktop_agent_backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  learning.md  main.py  pyproject.toml  requirements.txt  security_report.md
.agents/skills/batch-rename/: SKILL.md
.agents/skills/clipboard_transport/: SKILL.md
.agents/skills/csv_viewer/: SKILL.md
.agents/skills/novel-writer/: SKILL.md
.agents/skills/skill-creator/: SKILL.md
alembic/: env.py
alembic/versions/: 0099c12f0d6c_更新验证码表.py  53532f0e6921_初始化.py
app/: config.py  main.py
app/agents/: checkpointer.py  graph.py  llm.py  nodes.py  state.py  streaming.py
app/agents/prompts/: README.md  code_style.md  commit_message.md  git_safety.md  human_interaction.md  pr_description.md  (+7 more)
app/middleware/: auth.py
app/models/: __init__.py  audit_log.py  base.py  conversation.py  message.py  user_auth.py
app/repositories/: audit_repo.py  auth_repo.py  base.py  conversation_repo.py  message_repo.py  settings_repo.py
app/routers/: auth.py  chat.py  conversations.py  health.py  reserved.py  settings.py  skills.py  tools.py
app/schemas/: agent.py  auth.py  chat.py  conversation.py  error.py  health.py  settings.py  skill.py
app/security/: audit_logger.py  path_validator.py  rate_limiter.py  shell_guard.py  token.py
app/services/: auth_service.py  chat_service.py  conversation_service.py  health_service.py  skill_service.py  workspace_service.py
app/tools/: sandbox.py
app/utils/: checkpointer.py  exceptions.py  logging.py  trace.py
tests/: test_api.py  test_security.py
(+11 files in other folders)
