[project]
name = "agent-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiomysql>=0.2.0",
    "aiosmtplib>=3.0.0",
    "alembic>=1.13.0",
    "bcrypt>=4.1.0",
    "fastapi>=0.137.0",
    "langchain>=0.3.0",
    "langgraph>=1.2.5",
    "litellm>=1.0.0",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.0.0",
    "pyjwt[crypto]>=2.8.0",
    "pymysql>=1.1.0",
    "sqlalchemy>=2.0.25",
    "structlog>=24.0.0",
    "uvicorn>=0.30.0",
]
